Final draft for 6 April

--- a/2025/2025-04-06-wir.md
+++ b/2025/2025-04-06-wir.md
@@ -1,5 +1,5 @@
-# Tech tariffs tktktk
-## TKTKTK
+# Yes, the trade war is coming for tech.
+## As countries retaliate against America's new tariffs, software and internet services will experience their share of turbulence.
 
 ![Sunset at the Port of Oakland](https://w3w.news/img/ronan-furuta-full-1920.jpg)
 
@@ -17,55 +17,48 @@ If we use the backup, credit to Erik McLean via Unsplash.
 
 <hr>
 
-**Tariffs aren't just about physical goods** like autos, food, and clothes. Service-oriented sectors like tech may also be heavily affected in the global trade war that America just set off.
 
-- Friedman columns: <!-- Links TK -->
+**The global trade war that Donald Trump just provoked** is ostensibly about boosting manufacturing, autos, and other brick-and-mortar industries. But the new politics of tariffs will inevitably have big implications for tech as well.
 
-- Zakaria take on the macroeconomics of tariffs. <!-- Link TK -->
+Some stories and links offering useful perspective:
 
-- Crypto not affected so far. <!-- -->
+- **The New York Times' Tom Friedman** made a well-timed reporting trip to China last month, right before the trade war erupted. He came away convinced Washington is [seriously miscalculating](https://news.google.com/read/CBMidkFVX3lxTE5RUFAwVlhRbjhycXc4SFplZDlDR2FTdFlSOUxlb3RDUi1xUGo2UVl3MzhGX2Y0b3hvRS1HUFpGTmZRaEZXSGJSLXJ1RHF2d3Vmel9VbTdZdzVPeEJkbE80U1pvSW1la2FHanlyWmpCUFRaRGYtZkE?hl=en-US&gl=US&ceid=US%3Aen) the nature of economic competition from China and how the country's technical capabilities stack up to ours. Friedman says that's especially tragic considering America and China urgently need to [expand collaboration on AI](https://news.google.com/read/CBMib0FVX3lxTFBoaEF3dTRMV2hZam5nUVFKZVhyY0NzRmRFTmcyeTZITEFXYUd5Tm1yVVhJVjlGRFVlQWZQbFFKTVRkX1dTeHEzNmNleDkwVk5Zam1kYXJXelBiWWdITzZ0ZkhXMnREYVRoLWVfUW1Xcw?hl=en-US&gl=US&ceid=US%3Aen) right now, not isolate from each other.
 
-- Taiwan tariffs don't apply to chips: https://www.independent.co.uk/news/world/americas/trump-tariffs-countries-list-uk-russia-north-korea-b2727282.html
+- **It would be hard to beat** CNN host Fareed Zakaria's [recent take](https://www.youtube.com/watch?v=DDtZLShib2E&pp=ygUTY25uIHpha2FyaWEgdGFyaWZmcw%3D%3D) for a brief yet thorough and layman-friendly overview of the highly problematic economics of tariffs. In particular, Zakaria points out why it's misguided for American officials to push for a "manufacturing comeback" instead of embracing an economy that emphasizes more lucrative, high-skill services in tech and other sectors.
 
-- Relevant Google news search: https://news.google.com/search?q=tariffs%20tech%20industry&hl=en-US&gl=US&ceid=US%3Aen
+- **The White House exempted computer chips** from new tariffs of 32% on imports from Taiwan. That was welcome news for many companies that use the country's chips as components in various devices. But another major global semiconductor supplier, South Korea, was not spared in the new U.S. tariff regime. ([New York Times](https://news.google.com/read/CBMigAFBVV95cUxNazZ4TGJSclZKM1kzbm9YWTM3cnVVWERDSFJqSFREUW9VRTBnX0ZVbXdVUTU2RWxfNmdrMEVacEdyQzZ3X24yX0RWOTNYOEY4NHM0VUs4dm5ZX2FHdHZIaEJwZU1pRkpaUnlseDFuMF9jTktrS3hEdHpmeFlLTzM0Sw?hl=en-US&gl=US&ceid=US%3Aen))
 
-- Tech lobby is hoping US tariffs might be leverage to wrangle concessions out of relatively tough European regulators: https://www.politico.com/news/2025/04/02/tech-tariffs-optimism-030088
+- **Of course, the tariffs are already** causing big headaches for anyone who makes gadgets. Several news organizations reported that the price of an iPhone could soon jump [to $2,300](https://www.reuters.com/technology/will-trump-tariffs-make-apple-iphones-more-expensive-2025-04-03/). CNBC [checked in](https://www.cnbc.com/2025/04/02/small-tech-firms-left-in-limbo-by-shifting-trump-tariff-policy.html) with smaller U.S. companies worried about their supply chains and ability to pass along the costs of making kitchen appliances and other devices. Meanwhile, Nintendo delayed pre-orders in the U.S. for its new Switch 2 gaming console, which had been set to begin Wednesday. The company [told IGN](http://ign.com/articles/nintendo-delays-switch-2-pre-order-date-in-the-us-to-assess-impact-of-trumps-tariffs), a popular gaming news site, that it needs additional time "to assess the potential impact of tariffs and evolving market conditions."
 
-- Markets: Nasdaq entering bear market, etc. https://www.reuters.com/technology/apple-shares-drop-7-frankfurt-after-trump-tariffs-china-2025-04-03/
+- **Big Tech's lobbyists in Washington** are cautiously hopeful the trade war might provide leverage to demand more favorable treatment in the European Union and other jurisdictions that have slapped stricter regulations on them in recent years. ([Politico](https://www.politico.com/news/2025/04/02/tech-tariffs-optimism-030088))
 
-- Gadgets an obvious casualty: https://www.cnbc.com/2025/04/02/small-tech-firms-left-in-limbo-by-shifting-trump-tariff-policy.html | https://finance.yahoo.com/news/live/trump-tariffs-live-updates-china-retaliates-with-34-tariff-as-markets-suffer-from-fallout-191201417.html | The Hill: https://thehill.com/policy/technology/5231124-trump-tariffs-tech-industry/
+- **A tax cut for U.S. tech companies** may already be on the table in the U.K. in exchange for tariff relief for British exports to the U.S. ([The Guardian](https://www.theguardian.com/us-news/2025/apr/01/starmer-offered-big-us-tech-firms-tax-cuts-in-return-for-lower-trump-tariffs))
 
-- Preliminary WSJ update on Big Tech and tariffs: https://www.wsj.com/livecoverage/trump-tariffs-trade-war-stock-market-04-03-2025/card/plenty-of-tariff-pain-for-big-tech-from-supply-chains-to-advertising-impact-mWo7CTPhMzNfgknCLGC7
+- **But the situation clearly hasn't been a boon** to America's public tech companies quite yet. After another big selloff on Wall Street on Friday, the tech-oriented Nasdaq Composite Index is officially in a bear market, down 20% from its December peak. ([Reuters](https://finance.yahoo.com/news/nasdaq-confirms-bear-market-ending-202904516.html))
 
-- Nintendo switch pre-orders canceled.
+- **If the trade war persists,** it could contribute to de-dollarization as countries look for alternatives to the greenback as the basis for international trade. That could in turn bolster bitcoin long-term. ([FXStreet](https://www.fxstreet.com/cryptocurrencies/news/tariff-turmoil-in-washington-what-it-could-mean-for-crypto-202504041216))
 
-- UK's Starmer offering US tech companies tax cuts: https://www.theguardian.com/us-news/2025/apr/01/starmer-offered-big-us-tech-firms-tax-cuts-in-return-for-lower-trump-tariffs
-
-- Semafor coverage: https://www.semafor.com/article/04/03/2025/what-trumps-tariffs-mean-for-the-tech-industry
-
-- Klarna IPO delayed.
+- **Now <em>there's</em> a metaphor for you.** Tariffs on imported steel and aluminum are already translating into higher prices for screws in the U.S. ([Wall Street Journal](https://www.wsj.com/economy/trade/trump-tariffs-steel-metal-products-80b5f289?st=kJ3xj1&reflink=desktopwebshare_permalink))
 
 ### Five Things: March 30 to April 5, 2025
 
-The week's top stories in emerging tech:
+**The week also saw some notable headlines** that had blessedly little (or nothing whatsoever) to do with America's bonkers trade policy:
 
-- Bosa video on AI for CNBC. ([]()) <!-- Link TK -->
+- **Developer Agustin Cruz introduced a proposal** in Bitcoin's open-source community to implement a new encryption protocol to secure the network against quantum computing-related threats. ([CoinDesk](https://www.coindesk.com/tech/2025/04/05/bitcoin-developer-proposes-hard-fork-to-protect-btc-from-quantum-computing-threats))
 
-- TC story questioning a16z-backed startup 11x's user metrics: https://techcrunch.com/2025/03/24/a16z-and-benchmark-backed-11x-has-been-claiming-customers-it-doesnt-have/ ([]())
+- **Revenue declined more than 50% in March** for major decentralized finance (DeFi) protocols, [driven by broader downturn](https://www.theblock.co/post/349471/defi-revenues-plunge-in-march-as-onchain-activity-slows) in on-chain activity and trading volumes. The trend has helped push Ethereum network fees to [historic lows](https://www.theblock.co/post/349478/ethereum-transaction-fees-drop-to-historic-lows-as-transaction-volume-remains-stable) recently.
 
-- **Coinbase shares suffered their steepest quarterly drop** since FTX's collapse, off 33% in the first quarter. ([Cointelegraph](https://cointelegraph.com/news/coinbase-sees-worst-quarter-since-ftx-collapse))
+- **The Securities and Exchange Commission's acting chairman** said the U.S. market regulator is reviewing past crypto-related guidance to determine whether it reflects the agency’s current priorities. ([CoinDesk](https://www.coindesk.com/policy/2025/04/05/sec-staff-to-reassess-biden-era-crypto-guidance-amid-regulatory-shakeup))
 
-- eToro IPO update ([]()) <!-- Link tk if it's of interest. Item is also cbk if necessary. -->
+- **Donald Trump pardoned former executives at BitMEX** who pleaded guilty in 2022 to charges related to the exchange's anti-money laundering standards. ([Reuters](https://www.reuters.com/world/us/trump-pardoned-bitmex-co-founders-white-house-official-says-2025-03-28/))
 
-- Trump pardoned Bitmex's founders | Trump sons forming new bitcoin mining firm. ([]()) <!-- Links tk -->
-
-- **Institutional bitcoin whales** have been adding to their holdings of the token. https://www.coindesk.com/markets/2025/04/01/tether-bought-8-888-bitcoin-in-q1-for-usd735m | https://www.coindesk.com/markets/2025/04/01/metaplanet-ups-bitcoin-holding-to-over-4-000-btc-rakes-up-another-696-btc
+- **TechCrunch reports that 11x,** a startup focusing on AI-powered sales automation, may have been claiming [customers it didn't have](https://techcrunch.com/2025/03/24/a16z-and-benchmark-backed-11x-has-been-claiming-customers-it-doesnt-have/) in communications with investors. Yikes.
 
 ### Odds & Ends
 
-- TK ([]())
+- **Saturday marked Satoshi Nakamoto's 50th birthday -- sort of.** Years ago, the pseudonymous Bitcoin creator registered April 5, 1975, as his date of birth on the P2P Foundation's website. The choice seems to be a sly play on some significant dates in U.S. monetary history. ([Decrypt](https://decrypt.co/313481/happy-birthday-satoshi-nakamoto-bitcoin))
 
-- TK ([]())
+- **A Minecraft Movie grossed $157 million** in the U.S. over its opening weekend to set a new domestic record for a film based on a video game. It surpassed the previous benchmark set by Super Mario Bros. in 2023. ([Collider](https://collider.com/minecraft-domestic-box-office-157-million/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
