--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -24,7 +24,9 @@ Some evergreen ideas for the lead item...
 -->
 
 ### Five Things: April 6-12, 2025
-
+<!--
+ -->
+- Bosa video on AI for CNBC. ([]())  Link TK
 - TK ([]())
 - TK ([]())
 - TK ([]())
