Adding some headlines for 13 Apr

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -24,14 +24,22 @@ Some evergreen ideas for the lead item...
 -->
 
 ### Five Things: April 6-12, 2025
+- Bosa video on AI for CNBC. ([]()) <!-- Link TK -->
+- Galaxy listing on Nasdaq? ([]()) <!-- Link TK -->
+- BTC holding up well through market volatility ([]()) <!-- Link TK -->
+- DOJ dissolves its crypto task force. ([]()) <!-- Link TK -->
+- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) <!-- Link TK -->
+
 <!--
- -->
-- Bosa video on AI for CNBC. ([]())  Link TK
-- TK ([]())
-- TK ([]())
-- TK ([]())
-- TK ([]())
-- TK ([]())
+
+Other candidates...
+
+- Ripple buys Hidden Road.
+- House committee hearing wednesday on innovation and digital assets.
+- Argentina probing Libra.
+- Ripple ETF debut.
+
+-->
 
 ### Odds & Ends
 
