Removing some old drafts

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -22,36 +22,53 @@ Some evergreen ideas for the lead item...
 - BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
 
 -->
-
-### Five Things: April 6-12, 2025
-- Bosa video on AI for CNBC. ([]()) <!-- Link TK -->
-- Galaxy listing on Nasdaq? ([]()) <!-- Link TK -->
-- BTC holding up well through market volatility ([]()) <!-- Link TK -->
-- DOJ dissolves its crypto task force. ([]()) <!-- Link TK -->
-- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) <!-- Link TK -->
-
 <!--
 
 Other candidates...
 
+- Bosa video on AI for CNBC. ([]()) <!-- Link TK
+- Galaxy listing on Nasdaq? ([]()) <!-- Link TK
+- DOJ dissolves its crypto task force. ([]()) <!-- Link TK
+- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) <!-- Link TK
 - Ripple buys Hidden Road.
 - House committee hearing wednesday on innovation and digital assets.
 - Argentina probing Libra.
 - Ripple ETF debut.
 
+- TK ([](https://www.washingtonpost.com/technology/2025/04/09/ai-em-dash-writing-punctuation-chatgpt/))
 -->
+
+### Five Things: April 6-12, 2025
+
+<!-- Riff on the week's insane markets/tariffs... -->
+
+- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson
+
+- S&P 500 trading like a meme stock.
+
+- Bond yields/debt ceiling.
+
+- "Rivers reversing." Effect on Big Tech.
+
+- BTC holding up well through market volatility ([]()) <!-- Link TK -->
 
 ### Odds & Ends
 
-- TK ([]())
-- TK ([]())
+- TK ([](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
+
+- Coachella: https://www.coachella.com/schedule
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
+<!-- Other boilerplate needs reworking...
+
 _**About me: I'm a New York-based consultant and writer with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization at the time with other people doing the same.**_
 
- _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
+_**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
 
- _**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
+_**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
 
- _**Best wishes for a healthy and productive week ahead.**_ 😊
+
+-->
+
+_**Best wishes for a healthy and productive week ahead.**_ 😊
