Edits by me to photo, copy for 13 Apr '25.

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,60 +1,44 @@
 # tktk
 ## tktk
 
-![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
+![Robot manning a workstation](https://w3w.news/img/illos/robot-journos-2-cropped.jpg)
 
-*Photo by Rod Long via Unsplash
+*"Robot Journos 2." Illustration by Peter A. McKay x DALL·E*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
-**TKTK.*** tktktk.
-
-<!--
-
-Some evergreen ideas for the lead item...
-
-- GOUP: One of the subtle bad ideas of the Trump admin is that its fixing the frame of 'number go up' around blockchain technology.
-
-- CNBC: Riff on financial channels vid re: "wrapper" startups vs model builders. Hmmmm... Find YouTube link.
-
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
-
--->
-<!--
-
-Other candidates...
-
-- Bosa video on AI for CNBC. ([]()) <!-- Link TK
-- Galaxy listing on Nasdaq? ([]()) <!-- Link TK
-- DOJ dissolves its crypto task force. ([]()) <!-- Link TK
-- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) <!-- Link TK
-- Ripple buys Hidden Road.
-- House committee hearing wednesday on innovation and digital assets.
-- Argentina probing Libra.
-- Ripple ETF debut.
-
-- TK ([](https://www.washingtonpost.com/technology/2025/04/09/ai-em-dash-writing-punctuation-chatgpt/))
--->
+**TKTK.** tktktk.
 
 ### Five Things: April 6-12, 2025
 
 <!-- Riff on the week's insane markets/tariffs... -->
 
-- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson
+- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | "Rivers reversing." Effect on Big Tech.
 
-- S&P 500 trading like a meme stock.
+- DOJ dissolves its crypto task force. ([]())
 
-- Bond yields/debt ceiling.
+- Ripple buys Hidden Road + new ETF
 
-- "Rivers reversing." Effect on Big Tech.
+- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) <!-- Link TK
 
-- BTC holding up well through market volatility ([]()) <!-- Link TK -->
+- Galaxy listing on Nasdaq? ([]())
+
+<!--
+
+Other candidates...
+
+- Bosa video on AI distillation for CNBC.
+- House committee hearing wednesday on innovation and digital assets.
+- Argentina probing Libra.
+
+-->
+
 
 ### Odds & Ends
 
-- TK ([](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
+- TK ([Washington Post](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
 
 - Coachella: https://www.coachella.com/schedule
 
@@ -67,7 +51,6 @@ _**About me: I'm a New York-based consultant and writer with more than seven yea
 _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
 
 _**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
-
 
 -->
 
