Initial NotebookLM prompt + results in comments. No changes to copy for now.

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,3 +1,42 @@
+<!--
+
+Did a NotebookLM query last night trying to refine this week's news summary items, all selected by me so far. Didn't really like the NotebookLM results and haven't made any edits to this edition's copy yet based on them. But this query did clarify for me some changes I need to make in my research notebook's training sources.
+
+Will proceed with those and re-run the query.  Specifically, I'm going to add in some relevant Google News search links and remove this edition's early draft from the training data. This edition of the newsletter is ultimately supposed to be the output of my workflow, not the input, so I realize it doesn't need to be in the training data.
+
+ Chalk it up to growing pains from just getting started, I guess. Anyway, for the record, here's the query. -PM
+
+# Query
+
+For my next newsletter, going out 13 April 2025, could you please suggest 10 recent articles with links that I might want to include in my news summary?
+
+# Response
+
+Here are 10 recent articles with links that you might want to include in your newsletter going out on April 13, 2025, drawing from the provided sources:
+
+1. Good Prof G episode: This episode discusses the S&P 500 trading like a meme stock, bond yields/debt ceiling, and the "rivers reversing" effect on Big Tech. While the specific link isn't fully provided in the source ("https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | 'Rivers reversing.' Effect on Big Tech."), you can likely find the full link by searching for "Prof G S&P 500 meme stock April 2025".
+
+2. DOJ dissolves its crypto task force: This is mentioned as a notable event in the week of April 6-12, 2025. The source for this information is not provided in the excerpt, indicated by "()". You would need to find a news article from a reputable source covering this event, such as Reuters, Bloomberg, or the Wall Street Journal, to get the link.
+
+3. Ripple buys Hidden Road + new ETF: This indicates two significant developments for Ripple in the week of April 6-12, 2025. Similar to the previous point, the source is not provided "()". Search for news articles from that week about Ripple acquiring Hidden Road and launching a new ETF on financial news sites.
+
+4. Tether considering new US stablecoin to facilitate faster payments between banks: This potential development for Tether is noted in the week of April 6-12, 2025. The link is marked as "TK", meaning "to come" or "to be added." Look for articles on financial news outlets reporting on Tether's plans for a new US stablecoin around that time.
+
+5. Galaxy listing on Nasdaq?: This suggests a potential public listing for Galaxy Digital on the Nasdaq in the week of April 6-12, 2025. The source is again not provided "()". Search financial news for updates on Galaxy Digital's potential Nasdaq listing around early April 2025.
+
+6. U.S. SEC's Crypto Trading Roundtable Delves Into Easing Path for Platforms: This CoinDesk article from "14 hours ago" (relative to the source's timestamp, likely around April 11, 2025) reports on the SEC discussing a potential short-term solution for overseeing crypto firms. You can find this article at: https://www.coindesk.com/policy/2025/04/11/us-secs-crypto-trading-roundtable-delves-into-easing-path-for-platforms/
+
+7. Ripple and SEC File Joint Motion to Pause Appeals: Another CoinDesk article from "Apr 11, 2025" indicates a potential pause in the legal battle between Ripple and the SEC to allow for a "negotiated resolution". This article can be found at: https://www.coindesk.com/policy/2025/04/11/ripple-and-sec-file-joint-motion-to-pause-appeals/
+
+8. Donald Trump's Memecoin Faces Massive $320M Token Unlock Amid Record Low Price: This CoinDesk article from "18 hours ago" (likely around April 10 or 11, 2025) discusses a significant token unlock for the TRUMP memecoin and its low price. Look for this article on CoinDesk's website with that headline and approximate date.
+
+9. Crypto Exchanges Like Coinbase May Soon Get a Regulatory Sandbox to Play In: This headline appears in the "Top News" section of Decrypt, suggesting a development where crypto exchanges, possibly including Coinbase, might get a regulatory sandbox. Search for this article on Decrypt's website around April 11, 2025.
+
+10. BlackRock Crypto Asset Holdings Down $5 Billion as Bitcoin, Ethereum Prices Fall: This article is listed in Decrypt's "News Explorer" from "Apr 11". It reports on a decrease in the value of BlackRock's crypto holdings due to price drops in Bitcoin and Ethereum. You can find this article on Decrypt's website with that headline and date.
+Please note that for the first five suggestions, the specific links were not available in the provided source excerpts. You will need to conduct further research on financial news websites to find the corresponding articles and their links. The last five suggestions are based on more specific headlines and dates from CoinDesk and Decrypt, making it easier to locate the articles online.
+
+-->
+
 # tktk
 ## tktk
 
@@ -34,7 +73,6 @@ Other candidates...
 - Argentina probing Libra.
 
 -->
-
 
 ### Odds & Ends
 
